# WorkFlow

./: .gitignore  Block.h  BlockFactory.h  BlockMaker.h  CMakeLists.txt  IBlockMaker.h  WorkFlowExecutor.h  WorkFlowParser.h  main.cpp
Blocks/: Dump.cpp  Dump.h  Grep.cpp  Grep.h  ReadFile.cpp  ReadFile.h  Replace.cpp  Replace.h  Sort.cpp  Sort.h  WriteFile.cpp  WriteFile.h
Exceptions/: BadBlockOrder.h  InvalidInputStructure.h  InvalidNumberOfArguments.h  MultipleMakers.h  UndefinedBlock.h
